@@ -7,16 +7,16 @@ public class Main {
         boolean novo = true;
         System.out.println("\t\t\tFESTIVAL CINEMA");
         System.out.print("(n): Começar um novo programa \t(c): Carregar um programa anterior\nOpção:");
-        Scanner scan = new Scanner(System.in,"cp1252");
+        Scanner scan = new Scanner(System.in, "cp1252");
         String opcao = scan.nextLine();
         while (opcao.length() >= 2) {
-            System.out.print("Por favor selecione uma das opções disponíveis.");
-            try {
-                Runtime.getRuntime().exec("cls");
-            } catch (Exception e) {
-
-            }
-            System.out.println("\t\t\tFESTIVAL CINEMA");
+            System.out.println("Por favor selecione uma das opções disponíveis.");
+//            try {
+//                new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
+//            } catch (Exception e) {
+//
+//            }
+            //System.out.println("\t\t\tFESTIVAL CINEMA");
             System.out.print("(n): Começar um novo programa \t(c): Carregar um programa anterior\nOpção:");
             opcao = scan.nextLine();
         }
